# src/main/kotlin/com/wutsi/platform/security/dto/CreateScopeResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.platform.security.dto
+
+import kotlin.Long
+
+public data class CreateScopeResponse(
+    public val id: Long = 0
+)
