# src/main/kotlin/com/wutsi/platform/security/endpoint/CreateScopeController.kt
@@ -1,13 +1,13 @@
 package com.wutsi.platform.security.endpoint
 
-import com.wutsi.platform.security.`delegate`.GetKeyDelegate
-import com.wutsi.platform.security.dto.GetKeyResponse
+import com.wutsi.platform.security.`delegate`.CreateScopeDelegate
+import com.wutsi.platform.security.dto.CreateScopeRequest
+import com.wutsi.platform.security.dto.CreateScopeResponse
 import org.springframework.web.bind.`annotation`.CrossOrigin
-import org.springframework.web.bind.`annotation`.GetMapping
-import org.springframework.web.bind.`annotation`.PathVariable
+import org.springframework.web.bind.`annotation`.PostMapping
+import org.springframework.web.bind.`annotation`.RequestBody
 import org.springframework.web.bind.`annotation`.RestController
-import javax.validation.constraints.NotNull
-import kotlin.Long
+import javax.validation.Valid
 
 @RestController
 @CrossOrigin(
@@ -22,10 +22,10 @@ import kotlin.Long
         org.springframework.web.bind.annotation.RequestMethod.PUT
     ]
 )
-public class GetKeyController(
-    private val `delegate`: GetKeyDelegate
+public class CreateScopeController(
+    private val `delegate`: CreateScopeDelegate
 ) {
-    @GetMapping("/v1/keys/{id}")
-    public fun invoke(@PathVariable(name = "id") @NotNull id: Long): GetKeyResponse =
-        delegate.invoke(id)
+    @PostMapping("/v1/scopes")
+    public fun invoke(@Valid @RequestBody request: CreateScopeRequest): CreateScopeResponse =
+        delegate.invoke(request)
 }
