# src/main/kotlin/com/wutsi/platform/security/endpoint/GrantScopesController.kt
@@ -1,11 +1,13 @@
 package com.wutsi.platform.security.endpoint
 
-import com.wutsi.platform.security.`delegate`.GetKeyDelegate
-import com.wutsi.platform.security.dto.GetKeyResponse
+import com.wutsi.platform.security.`delegate`.GrantScopesDelegate
+import com.wutsi.platform.security.dto.GrantScopeRequest
 import org.springframework.web.bind.`annotation`.CrossOrigin
-import org.springframework.web.bind.`annotation`.GetMapping
 import org.springframework.web.bind.`annotation`.PathVariable
+import org.springframework.web.bind.`annotation`.PostMapping
+import org.springframework.web.bind.`annotation`.RequestBody
 import org.springframework.web.bind.`annotation`.RestController
+import javax.validation.Valid
 import javax.validation.constraints.NotNull
 import kotlin.Long
 
@@ -22,10 +24,15 @@ import kotlin.Long
         org.springframework.web.bind.annotation.RequestMethod.PUT
     ]
 )
-public class GetKeyController(
-    private val `delegate`: GetKeyDelegate
+public class GrantScopesController(
+    private val `delegate`: GrantScopesDelegate
 ) {
-    @GetMapping("/v1/keys/{id}")
-    public fun invoke(@PathVariable(name = "id") @NotNull id: Long): GetKeyResponse =
-        delegate.invoke(id)
+    @PostMapping("/v1/applications/{id}/scopes")
+    public fun invoke(
+        @PathVariable(name = "id") @NotNull id: Long,
+        @Valid @RequestBody
+        request: GrantScopeRequest
+    ) {
+        delegate.invoke(id, request)
+    }
 }
